--- a/style.css
+++ b/style.css
@@ -45,11 +45,11 @@ body {
 }
  
 .input1 {
-    width: 58vw;
+    width: 100%;
     text-align: center;
-    height: 3vw;
+    height: 40px;
     place-items: center;
-    font-size: 20px;
+    font-size: 15px;
     border: 2px solid white;
     border-radius: 18px;
     margin-top: 2vw;
